started the website dear god

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-
+        <title> Ben Franklin Course Library</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <div>
-            <p> hello world </p>
+        <!-- All content goes here -->
+        <div> 
+            <nav>
+                <h1>Benjamin Franklin Course Library</h1>
+                <ul>
+                    <li>
+                      <a href="index.html"> Home </a>
+                    </li>
+                    <li>
+                      <a href="portfolio.html"> Portfolio </a> <!-- Change this because it is a placeholder so the ul tag doesn't combust-->
+                    </li>
+                </ul>
+            </nav>
+    
+            <main>
+                <!-- Sidebar section -->
+                <div>
+                    <img src="./images/download.jpg">
+                    </div>
+          
+                <!-- Content section -->
+                <div>
+                    <h2> Benjamin Franklin Course Library</h2>
+                </div>
+                <!-- Interests section -->
+                <div>
+                    <h3>Interests</h3>
+                    <ul>
+                        <li>Thing 1</li>
+                        <li>Thing 2</li>
+                        <li>Thing 3</li>
+                    </ul>
+                </div>
+            </main>
         </div>
     </body>
 </html>
